--- a/index.html
+++ b/index.html
@@ -3,13 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Clock</title>
-    
-    <script src="EventEmitter.js"></script>
-    <script src="Model.js"></script>
-    <script src="View.js"></script>
-    <script src="Controller.js"></script>
 </head>
 <body>
-    <div id="clock"></div>
+    <div id="clock">
+        <div>
+            <span id='hours'></span> :
+            <span id='minutes'></span> :
+            <span id ='seconds'></span>
+        </div>
+    </div>
+
+    <div id='controls'>
+        <button class="changeOffset" data-offset=3600   >+1h    </button>
+        <button class="changeOffset" data-offset=-3600  >-1h    </button>
+        <button class="changeOffset" data-offset=60     >+1m    </button>
+        <button class="changeOffset" data-offset=-60    >-1m    </button>
+        <button class="changeOffset" data-offset=1      >+1s    </button>
+        <button class="changeOffset" data-offset=-1     >-1s    </button>
+    </div>
+
+<!--    <div>
+        <button id='toggleClock'>Pause</button>
+        <button id='reset'>Reset</button>
+    </div>-->
+
+    <script src="./EventEmitter.js"></script>
+    <script src="./Model.js"></script>
+    <script src="./View.js"></script>
+    <script src="./Controller.js"></script>
+    <script src="./App.js"></script>
 </body>
 </html>
