--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <button class="changeOffset" data-offset=-1     >-1s    </button>
     </div>
 
-<!--    <div>
+    <div>
         <button id='toggleClock'>Pause</button>
         <button id='reset'>Reset</button>
-    </div>-->
+    </div>
 
-    <script src="./EventEmitter.js"></script>
-    <script src="./Model.js"></script>
-    <script src="./View.js"></script>
-    <script src="./Controller.js"></script>
-    <script src="./App.js"></script>
 </body>
+<script src="./EventEmitter.js"></script>
+<script src="./Model.js"></script>
+<script src="./View.js"></script>
+<script src="./Controller.js"></script>
+<script src="./App.js"></script>
 </html>
