--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div>
-        <button id='toggleClock'>Pause</button>
+<!--        <button id='toggleClock'>Pause</button>-->
         <button id='reset'>Reset</button>
     </div>
 
