tweked model to manage hour, minutes, seconds

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     </div>
 
     <div id='controls'>
-        <button class="changeOffset" data-offset=3600   >+1h    </button>
-        <button class="changeOffset" data-offset=-3600  >-1h    </button>
-        <button class="changeOffset" data-offset=60     >+1m    </button>
-        <button class="changeOffset" data-offset=-60    >-1m    </button>
-        <button class="changeOffset" data-offset=1      >+1s    </button>
-        <button class="changeOffset" data-offset=-1     >-1s    </button>
+        <button id="addHour">    +1h    </button>
+        <button id="remHour">    -1h    </button>
+        <button id="addMinute">  +1m    </button>
+        <button id="remMinute">  -1m    </button>
+        <button id="addSec">     +1s    </button>
+        <button id="remSec">     -1s    </button>
     </div>
 
-    <div>
-<!--        <button id='toggleClock'>Pause</button>-->
+<!--    <div>
+        <button id='toggleClock'>Pause</button>
         <button id='reset'>Reset</button>
-    </div>
+    </div>-->
 
 </body>
 <script src="./EventEmitter.js"></script>
