fully functional clock with reset button

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <button id="remSec">     -1s    </button>
     </div>
 
-<!--    <div>
-        <button id='toggleClock'>Pause</button>
+    <div>
+        <!--<button id='toggleClock'>Pause</button>-->
         <button id='reset'>Reset</button>
-    </div>-->
+    </div>
 
 </body>
 <script src="./EventEmitter.js"></script>
